fixed CSS on main page of buttons alignment and that of the Settings text

--- a/css/index.css
+++ b/css/index.css
@@ -51,6 +51,7 @@ p {
 
 #settings-toggle {
 	margin-left: 2%;
+	margin-right: 2%;
 	margin-top: 5px;
 }
 
@@ -63,4 +64,8 @@ p {
 	font-size: 24px;
 	font-weight: bold;
 	text-align: center;
+}
+
+.fa.pull-right {
+	color: #222;
 }
