--- a/css/report.css
+++ b/css/report.css
@@ -95,3 +95,7 @@ body {
 .nav-pills > li.disabled > a:focus {
   cursor: default;
 }
+
+.row {
+	margin: 0px;
+}
